2002-07-25  Wakaba <w@suika.fam.cx>

	* ChangeLog: New file.
	* send-msg.pl:
	- (pod:CHANGES): Removed.
	- (pod:LICENSE): New section.

2002-03-26  wakaba <w@suika.fam.cx>

	* send.pl: Adds User-Agent: value.

2002-03-25  wakaba <w@suika.fam.cx>

	* send.pl: Use Message::* Perl modules instead of RFC822.pm.

2002-03-10  wakaba <w@suika.fam.cx>

	* Give Date: header field with file's last-modified date.

2002-01-17  wakaba <wakaba@suika.fam.cx>

	* Use draft-ietf-usefor-msg-id-00 for generated message-id syntax.