@@ -4,6 +4,8 @@
 	* send-msg.pl:
 	- (pod:CHANGES): Removed.
 	- (pod:LICENSE): New section.
+	- Use Message::Util::get_host_fqdn to get string
+	sent to SMTP server with HELO.
 
 2002-03-26  wakaba <w@suika.fam.cx>
 
